# pleytner

./: .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
src/pleytner/: main.py
tests/: test_main.py
